--- a/apps/core/package.json
+++ b/apps/core/package.json
@@ -6,15 +6,12 @@
     "typescript": "^5.5.3",
     "@types/node": "^20.14.11"
   },
-  "dependencies": {
-    "@andriel123/queue": "workspace:*"
-  },
   "scripts": {
-    "build:queue": "pnpm --filter @andriel123/queue build",
+    "build:queue": "npm --workspace @andriel123/queue run build",
     "build:core": "tsc",
-    "build": "pnpm run build:queue && pnpm run build:core",
+    "build": "npm run build:queue && npm run build:core",
     "start": "node dist/index.js",
-    "dev": "pnpm run build && node dist/index.js",
+    "dev": "npm run build && node dist/index.js",
     "watch": "tsc --watch"
   }
 }
