--- a/apps/core/tsconfig.json
+++ b/apps/core/tsconfig.json
@@ -9,13 +9,12 @@
         "rootDir": "./src",
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
-        "typeRoots": [
-            "./node_modules/@types",
-            "./types"
-        ],
+        "types": [
+            "node"
+        ]
     },
     "include": [
-        "src"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules"
