--- a/apps/wweb-bot/tsconfig.json
+++ b/apps/wweb-bot/tsconfig.json
@@ -9,10 +9,9 @@
         "rootDir": "./src",
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
-        "typeRoots": [
-            "./node_modules/@types",
-            "./types"
-        ],
+        "types": [
+            "node"
+        ]
     },
     "include": [
         "src"
