update: RabbitMQServer Add: Test from transcript text from audio

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,15 @@
                 "${workspaceFolder}/apps/core/dist/**/*.js"
             ],
             "cwd": "${workspaceFolder}/apps/core"
+        },
+    ],
+    "compounds": [
+        {
+            "name": "Core + Bot",
+            "configurations": [
+                "wweb-bot",
+                "core"
+            ]
         }
     ]
 }
