--- a/apps/core/package.json
+++ b/apps/core/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "devDependencies": {
-    "typescript": "^5.5.3",
-    "@types/node": "^20.14.11"
+    "@types/node": "^20.14.11",
+    "typescript": "^5.5.3"
   },
   "scripts": {
     "build:queue": "npm --workspace @andriel123/queue run build",
@@ -13,5 +13,9 @@
     "start": "node dist/index.js",
     "dev": "npm run build && node dist/index.js",
     "watch": "tsc --watch"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "openai": "^4.53.0"
   }
 }
