--- a/packages/wweb-client/package.json
+++ b/packages/wweb-client/package.json
@@ -6,5 +6,9 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch"
+  },
+  "dependencies": {
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
   }
 }
