--- a/apps/wweb-bot/package.json
+++ b/apps/wweb-bot/package.json
@@ -15,5 +15,8 @@
     "@types/qrcode-terminal": "^0.12.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
   }
 }
