--- a/apps/wweb-bot/package.json
+++ b/apps/wweb-bot/package.json
@@ -4,8 +4,10 @@
   "main": "dist/index.js",
   "scripts": {
     "build:queue": "npm --workspace @andriel123/queue run build",
+    "build:types": "npm --workspace @andriel123/types run build",
+    "build:wweb-client": "npm --workspace @andriel123/wweb-client run build",
     "build:wweb-bot": "tsc",
-    "build": "npm run build:queue && npm run build:wweb-bot",
+    "build": "npm run build:queue && npm run build:types && npm run build:wweb-client && npm run build:wweb-bot",
     "start": "node dist/index.js",
     "dev": "npm run build && node dist/index.js",
     "watch": "tsc --watch"
